--- a/index.html
+++ b/index.html
@@ -3,89 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LivenJet | Nexus OS</title>
+    <title>LivenJet | Neural Nexus</title>
     <style>
-        :root { --gold: #FFD700; --dark: #050505; --neon: #00f2ff; }
-        body { background-color: #000; color: var(--gold); font-family: 'Segoe UI', sans-serif; text-align: center; padding: 20px 0; margin: 0; overflow-x: hidden; padding-bottom: 140px; }
+        :root { --gold: #FFD700; --dark: #050505; }
+        body { background-color: #000; color: var(--gold); font-family: 'Segoe UI', sans-serif; text-align: center; padding: 0; margin: 0; overflow-x: hidden; padding-bottom: 140px; }
         
-        /* GLOBAL COMMAND TICKER */
-        .ticker-wrap { width: 100%; overflow: hidden; background: #111; border-bottom: 1px solid #222; padding: 5px 0; position: fixed; top: 0; z-index: 2000; }
-        .ticker { display: flex; white-space: nowrap; animation: ticker-move 20s linear infinite; font-family: monospace; font-size: 10px; color: #888; letter-spacing: 1px; }
-        @keyframes ticker-move { 0% { transform: translateX(100%); } 100% { transform: translateX(-100%); } }
+        /* Command Ticker */
+        .ticker-wrap { width: 100%; background: #111; border-bottom: 1px solid #222; padding: 6px 0; position: fixed; top: 0; z-index: 2000; font-family: monospace; font-size: 10px; color: #666; }
 
-        /* Dashboard Styles */
-        .pillar { display: none; animation: slideUp 0.4s ease; padding: 20px; }
+        /* The Neural Core (Orb) */
+        .neural-core { width: 80px; height: 80px; background: radial-gradient(circle, var(--gold) 0%, transparent 70%); border-radius: 50%; margin: 60px auto 20px; position: relative; animation: core-pulse 3s infinite ease-in-out; }
+        .core-inner { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 40%; height: 40%; background: #fff; border-radius: 50%; box-shadow: 0 0 20px var(--gold); }
+        @keyframes core-pulse { 0%, 100% { transform: scale(1); opacity: 0.6; } 50% { transform: scale(1.1); opacity: 1; } }
+
+        /* AI Message Box */
+        .ai-status { font-size: 11px; font-family: monospace; color: #888; letter-spacing: 1px; height: 20px; }
+
+        /* Containers */
+        .pillar { display: none; padding: 20px; animation: slideIn 0.4s ease; }
         .active { display: block; }
-        @keyframes slideUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
 
-        /* Intelligent Cards */
+        /* Interactive Cards */
         .intel-card { 
-            background: linear-gradient(145deg, #0a0a0a, #000); border: 1px solid #1a1a1a; 
-            border-left: 4px solid var(--gold); border-radius: 12px; 
+            background: rgba(15,15,15,0.9); border: 1px solid #1a1a1a; 
+            border-bottom: 2px solid var(--gold); border-radius: 16px; 
             padding: 20px; margin: 15px auto; max-width: 340px; text-align: left;
         }
 
-        /* Status Ring */
-        .status-ring { width: 60px; height: 60px; border: 2px solid #222; border-top: 2px solid var(--gold); border-radius: 50%; animation: spin 2s linear infinite; margin: 0 auto; }
-        @keyframes spin { 100% { transform: rotate(360deg); } }
+        .btn { background: var(--gold); color: #000; font-weight: bold; padding: 18px; width: 100%; border: none; border-radius: 12px; margin: 10px 0; font-size: 12px; letter-spacing: 2px; }
 
-        /* Navigation Dock */
-        .dock { position: fixed; bottom: 15px; left: 50%; transform: translateX(-50%); width: 92%; max-width: 400px; background: rgba(10,10,10,0.95); border: 1px solid #222; border-radius: 25px; display: flex; justify-content: space-around; padding: 18px 0; z-index: 1000; backdrop-filter: blur(10px); }
-        .dock-item { font-size: 22px; opacity: 0.2; transition: 0.3s; color: #fff; }
+        /* Dock */
+        .dock { position: fixed; bottom: 15px; left: 50%; transform: translateX(-50%); width: 92%; max-width: 400px; background: rgba(5,5,5,0.98); border: 1px solid #222; border-radius: 25px; display: flex; justify-content: space-around; padding: 18px 0; z-index: 1000; }
+        .dock-item { font-size: 22px; opacity: 0.2; transition: 0.3s; }
         .active-icon { opacity: 1; color: var(--gold); transform: translateY(-8px); }
+
+        @keyframes slideIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; } }
     </style>
 </head>
 <body>
 
-    <div class="ticker-wrap">
-        <div class="ticker">
-            LIVENJET SATELLITE LJ-01: STATUS OPTIMAL | MARKET: LJN +4.2% (▲) | CARGO #992 IN-FLIGHT | SYSTEM TIME: <span id="ticker-clock"></span> | ENCRYPTION LEVEL: PLATINUM
-        </div>
-    </div>
+    <div class="ticker-wrap">SYSTEM NODE: LOS-NGA-01 | ENCRYPTION: ACTIVE | <span id="clock"></span></div>
 
-    <div style="padding-top: 40px;">
-        <div class="avatar" style="width:40px; height:40px; background:var(--gold); border-radius:8px; display:flex; align-items:center; justify-content:center; color:#000; font-weight:900; margin:10px auto;">SA</div>
-        <p style="margin:0; font-size:11px; font-weight:bold;">STEVEN ADEWOLE</p>
-    </div>
+    <div class="neural-core"><div class="core-inner"></div></div>
+    <div class="ai-status" id="ai-msg">INITIALIZING NEURAL LINK...</div>
 
     <div id="home" class="pillar active">
         <div class="intel-card">
-            <p style="font-size: 10px; color: #666; margin: 0;">AVAILABLE LIQUIDITY</p>
-            <h2 style="margin: 5px 0; font-size: 32px; font-family: monospace;">₦ 50,000.00</h2>
-            <p style="font-size: 10px; color: #0f0;">● NODE 01-ACTIVE</p>
+            <p style="font-size: 10px; color: #444; margin: 0;">GLOBAL LIQUIDITY</p>
+            <h2 style="margin: 5px 0; font-size: 32px; font-family: 'Courier New';">₦ 50,000.00</h2>
+            <p style="font-size: 9px; color: #0f0;">● ALL SYSTEMS NOMINAL</p>
         </div>
-        <div class="status-ring"></div>
-        <p style="font-size: 9px; margin-top: 10px; color: #444;">SYNCING WITH NEURAL LINK...</p>
+        <button class="btn" onclick="brain('Optimizing vault protocols...')">SYNC NETWORK</button>
     </div>
 
     <div id="logi" class="pillar">
         <div class="intel-card">
             <h3 style="margin:0;">JET-TRACK</h3>
-            <p style="font-size: 11px; color: #666;">Monitoring LOS ➔ DXB #LJ-77</p>
-            <div style="background: #111; height: 6px; border-radius: 10px; margin: 15px 0; overflow:hidden;">
-                <div style="background: var(--gold); width: 85%; height: 100%; box-shadow: 0 0 10px var(--gold);"></div>
+            <p style="font-size: 11px; color: #666;">Route LOS ➔ LHR #LJ-99</p>
+            <div style="background: #111; height: 6px; border-radius: 10px; margin: 15px 0;">
+                <div style="background: var(--gold); width: 82%; height: 100%;"></div>
             </div>
-            <p style="font-size: 10px; color: var(--gold);">ETA: 2H 40M</p>
+            <p style="font-size: 10px;">PROGRESS: 82%</p>
         </div>
+        <button class="btn" onclick="brain('Recalculating flight path...')">UPDATE RADAR</button>
     </div>
 
     <div id="util" class="pillar">
         <div class="intel-card">
-            <h3 style="margin:0;">VEND HUB</h3>
-            <p style="font-size: 11px; color: #666;">Select utility node to authorize.</p>
+            <h3 style="margin:0;">SMART VEND</h3>
             <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px; margin-top:15px;">
-                <div style="background:#111; padding:15px; border-radius:8px; border:1px solid #222;">⚡ POWER</div>
-                <div style="background:#111; padding:15px; border-radius:8px; border:1px solid #222;">📱 DATA</div>
+                <div style="background:#111; padding:15px; border-radius:8px; border:1px solid #222;" onclick="brain('Power node engaged.')">⚡ POWER</div>
+                <div style="background:#111; padding:15px; border-radius:8px; border:1px solid #222;" onclick="brain('Data node engaged.')">📱 DATA</div>
             </div>
         </div>
     </div>
 
     <div id="fina" class="pillar">
-        <div class="intel-card" style="border-right: 4px solid var(--gold);">
-            <p style="font-size: 10px; color: #888;">PLATINUM VAULT</p>
-            <h3 style="letter-spacing: 2px;">**** **** **** 8820</h3>
-            <p style="font-size: 11px; margin-top:20px;">ACCESS CODE REQUIRED</p>
+        <div class="intel-card" style="background: radial-gradient(circle at top right, #1a1a1a, #000);">
+            <p style="font-size: 10px; color: #888;">VAULT ACCESS</p>
+            <h3 style="letter-spacing: 2px;">**** 8820</h3>
+            <p style="font-size: 9px; margin-top:20px;">STEVEN ADEWOLE</p>
         </div>
+        <button class="btn" onclick="brain('Accessing secure vault...')">OPEN VAULT</button>
     </div>
 
     <div class="dock">
@@ -101,11 +100,27 @@
             document.querySelectorAll('.dock-item').forEach(d => d.classList.remove('active-icon'));
             document.getElementById(id).classList.add('active');
             document.getElementById('n-' + id).classList.add('active-icon');
+            brain('Switching to ' + id.toUpperCase() + ' hub...');
         }
-        setInterval(() => { 
-            const now = new Date();
-            document.getElementById('ticker-clock').innerText = now.toLocaleTimeString(); 
+
+        function brain(msg) {
+            const el = document.getElementById('ai-msg');
+            el.innerText = msg;
+            el.style.color = '#fff';
+            setTimeout(() => { el.style.color = '#888'; }, 2000);
+        }
+
+        setInterval(() => {
+            document.getElementById('clock').innerText = new Date().toLocaleTimeString();
         }, 1000);
+        
+        // Random AI thoughts
+        const thoughts = ["Scanning nodes...", "Satellite LJ-01 synced", "Encryption stable", "Network optimal"];
+        setInterval(() => {
+            if(document.getElementById('ai-msg').innerText.includes('Switching') === false) {
+                brain(thoughts[Math.floor(Math.random()*thoughts.length)]);
+            }
+        }, 8000);
     </script>
 </body>
 </html>
